--- a/GlowscriptTest.html
+++ b/GlowscriptTest.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <c-- Using GlowScript locally, based on the work of Vesa Lappalainen vesal@jyu.fi -->
-<title>GlowScript Offline</title>
+<title>GlowScript Modified</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
   <style>
@@ -36,6 +36,8 @@
   </style>
 </head>
 
+<!-- Replaced offline local folders with jsdelivr linked to snapshot of corresponding source in ghithub -->
+<!-- Same is done further down in combiler section-->
 <body class="GlowScriptBody">
 <!-- "glowscript_libraries/jquery-ui.custom.css" -->
 <link type="text/css" href="https://cdn.jsdelivr.net/gh/ahc-youngblood/glowscript@cd93c84d42b04991005e17339d18ac5ee8e7401b/GlowScriptOffline/glowscript_libraries/jquery-ui.custom.css" rel="stylesheet" />
