added pyodide definition

--- a/GlowscriptTest.html
+++ b/GlowscriptTest.html
@@ -34,10 +34,12 @@
     float: left;
   }
   </style>
+  <!-- load pyodide, BY -->
+  <script src="https://cdn.jsdelivr.net/pyodide/v0.25.0/full/pyodide.js"></script>
 </head>
 
 <!-- Replaced offline local folders with jsdelivr linked to snapshot of corresponding source in ghithub -->
-<!-- Same is done further down in combiler section-->
+<!-- Same is done further down in combiler section, BY -->
 <body class="GlowScriptBody">
 <!-- "glowscript_libraries/jquery-ui.custom.css" -->
 <link type="text/css" href="https://cdn.jsdelivr.net/gh/ahc-youngblood/glowscript@cd93c84d42b04991005e17339d18ac5ee8e7401b/GlowScriptOffline/glowscript_libraries/jquery-ui.custom.css" rel="stylesheet" />
