--- a/GlowscriptTest.html
+++ b/GlowscriptTest.html
@@ -73,6 +73,18 @@
 &nbsp;&nbsp;&nbsp;
 <input type="file" id="read_local_file"/>
 
+<script type="text/javascript">
+    // Pyodide loading BY
+    async function pyodidemain(){
+        let pyodide = await loadPyodide();
+        console.log(pyodide.runPython('
+            import sys
+            sys.version
+        '));
+    }
+    pyodidemain();
+</script>
+
 <script>
 const gsversion = '3.2'
 let printpane = false
