add await to pyimport

--- a/GlowscriptTest.html
+++ b/GlowscriptTest.html
@@ -83,7 +83,7 @@
         `));
     }
     pyodidemain();
-    let np = pyodide.pyimport("numpy");
+    let np = await pyodide.pyimport("numpy");
 </script>
 
 <script>
